Added get_admins endpoint.
